[package]
name = "windivert-sys"
version = "0.8.0"
description = "Raw FFI bindings for WinDivert user mode library"
authors = ["Ruben Serrano Izquierdo <rserranoizq@gmail.com>"]
repository = "https://github.com/Rubensei/windivert-rust.git"
homepage = "https://github.com/Rubensei/windivert-rust"
keywords = ["ffi", "windivert", "bindings", "driver"]
categories = ["external-ffi-bindings"]
readme = "../README.md"
license = "LGPL-3.0-or-later"
edition = "2018"
links = "WinDivert"
build = "build.rs"

[lib]
name = "windivert_sys"

[dependencies]

[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
]

[build-dependencies]
cc = "1.0.66"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"