[package]
name = "windivert-sys"
version = "0.10.0"
description = "Raw FFI bindings for WinDivert user mode library"
authors = ["Ruben Serrano Izquierdo <rserranoizq@gmail.com>"]
repository = "https://github.com/Rubensei/windivert-rust.git"
homepage = "https://github.com/Rubensei/windivert-rust"
documentation = "https://docs.rs/windivert-sys"
keywords = ["ffi", "windivert", "bindings", "driver"]
categories = ["external-ffi-bindings"]
readme = "../README.md"
license = "LGPL-3.0-or-later"
edition = "2021"
rust-version = "1.68"
links = "WinDivert"
build = "build/main.rs"

[lib]
name = "windivert_sys"

[features]
default = []
vendored = []
static = ["vendored"]

[dependencies]
thiserror = "1"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
]

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
