[package]
name = "windivert"
version = "0.6.0-alpha.1"
description = "Wrapper library around windivert-sys"
authors = ["Ruben Serrano Izquierdo <rserranoizq@gmail.com>"]
repository = "https://github.com/Rubensei/windivert-rust.git"
homepage = "https://github.com/Rubensei/windivert-rust"
documentation = "https://docs.rs/windivert"
keywords = ["ffi", "windivert", "bindings", "driver"]
categories = ["external-ffi-bindings"]
readme = "../README.md"
license = "LGPL-3.0-or-later"
edition = "2021"
rust-version = "1.64"

[features]
default = []
tracing = ["dep:tracing"]
vendored = ["windivert-sys/vendored"]

[dependencies]
etherparse = "0.13"
thiserror = "1"
tracing = { version = "0.1", optional = true }
windivert-sys = { version = "0.9.1-alpha.1", path = "../windivert-sys" }

[dependencies.windows]
version = "0.43.0"
features = [
	"Devices_Custom",
	"Win32_Devices",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_System_Diagnostics",
	"Win32_System_IO",
	"Win32_System_Ioctl",
	"Win32_System_Services",
	"Win32_System_Threading",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"